# soccer-sentiment-API-saas

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html
.github/workflows/: docker-build.yml
data/: sample_fan_sentiment.csv
src/: main.rs
